[package]
name = "dispkey"
version = "0.1.0"
authors = ["Yuta Katayama <katayama@axelspace.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.21"
env_logger = "0.7.1"
wgpu = "0.5"
wgpu_glyph = "0.9.0"
futures = "0.3"
anyhow = "1.0.31"
